@@ -130,11 +130,14 @@ RUN sed -i "/^pivpnHOST=/d" /tmp/setupVars.conf \
 # 13. Link "/etc/pivpn/setupVars.conf" to "/tmp/vars".
 # 14. Copy "/tmp/setupVars.conf" to "/tmp/vars" so that PiVPN will work as expected without running init script.
 # 15. Add line to "/tmp/vars" to load "/etc/openvpn/pivpn.env" so that PiVPN will work as expected without running init script.
+# 16. Patch PiVPN's "listOVPN.sh" script to properly process special characters.
+# 17. Patch PiVPN's "removeOVPN.sh" script to properly process special characters.
+# 18. Patch PiVPN's "removeOVPN.sh" script to properly process special characters.
 #=============================================================================================================================
 COPY html /var/www/pivpn/
-COPY 12-pivpn.conf /etc/lighttpd/conf-available/12-pivpn.conf
-COPY pivpn-gui.sudoers /etc/sudoers.d/pivpn-gui
-COPY read_certs /usr/local/bin/read_certs
+COPY files/12-pivpn.conf /etc/lighttpd/conf-available/12-pivpn.conf
+COPY files/pivpn-gui.sudoers /etc/sudoers.d/pivpn-gui
+COPY files/read_certs /usr/local/bin/read_certs
 RUN sed -i "/^main /d" "${MODDED}" \
 	&& chown -R www-data:www-data -R /var/www/pivpn/ \
 	&& cp /etc/lighttpd/lighttpd.conf /etc/lighttpd/lighttpd.conf.bak \
@@ -146,11 +149,14 @@ RUN sed -i "/^main /d" "${MODDED}" \
 	&& rm /etc/pivpn/setupVars.conf \
 	&& ln -sf /tmp/vars /etc/pivpn/setupVars.conf \
 	&& cp /tmp/setupVars.conf /tmp/vars \
-	&& echo '[[ -f /etc/openvpn/pivpn.env ]] && source /etc/openvpn/pivpn.env' >> /tmp/vars
+	&& echo '[[ -f /etc/openvpn/pivpn.env ]] && source /etc/openvpn/pivpn.env' >> /tmp/vars \
+	&& sed -i "s|\$NAME\" |\$(echo -e \"\$NAME\")\" |g" /usr/local/src/pivpn/scripts/openvpn/listOVPN.sh \
+	&& sed -i "s|CERTS\[\$i\]=.*|CERTS\[\$i\]=\$(echo -e \"\${NAME}\")|g" /usr/local/src/pivpn/scripts/openvpn/removeOVPN.sh \
+	&& sed -i "s|NAME=\$(echo \"|NAME=\$(echo -e \"|g" /usr/local/src/pivpn/scripts/openvpn/removeOVPN.sh
 
 #=============================================================================================================================
 # Everything else required for this Docker image:
 #=============================================================================================================================
 WORKDIR /home/"${install_user}"
-COPY run /home/"${install_user}/"
+COPY files/run /home/"${install_user}/"
 CMD ./run
